JFR did not collect call stacks when MaxJavaStackTraceDepth is set to zero

XMLWordPrintable

    • jfr
    • 11
    • b18

        JFR did not collect call stacks when MaxJavaStackTraceDepth is set to zero.

        How to reproduce:

        1. Pass some arguments to `java`
          -XX:StartFlightRecording=filename=test.jfr,settings=profile -XX:MaxJavaStackTraceDepth=0

        2. Run application

        3. Open flight record (test.jfr) on JMC

        4. Check call stack on "Method Profiling" window


        This bug is similar to JDK-7179701.

              Assignee:
              Yasumasa Suenaga
              Reporter:
              Yasumasa Suenaga
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: