8219566: JFR did not collect call stacks when MaxJavaStackTraceDepth is set to zero

Reviewed-by: egahlin, mgronlun